# GrimoireStudio

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  GEMINI.md  PRD.md  README.md  SPEC.md  USAGE.md  check_db.py  check_entities.py  check_routes.py  docker-compose.yml  e2e_smoke.py  grimoire.sqlite  package-lock.json  package.json  pyproject.toml  reset_db.py  seed_char.py  todo-list.md
backend/: AGENTS.md  README.md  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 26872b9f8b3d_initial_full_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  blocks.py  entities.py  generation.py  projects.py
backend/app/core/: config.py  lexorank.py  security.py
backend/app/core/prompts/: loader.py
backend/app/db/: session.py
backend/app/models/: __init__.py  chapter.py  entity.py  project.py  user.py
backend/app/schemas/: block.py  entity.py  generation.py  project.py  smoothing.py  user.py
backend/app/services/: llm_service.py  rag_service.py
backend/crud/: branches.py  entities.py  memory.py  scribe.py  snapshots.py  soft_patches.py  storyboard.py
backend/routers/: grimoire.py  memory.py  muse.py  render.py  sandbox.py  settings.py  storyboard.py
backend/services/: camera_client.py  llm_client.py  maestro_loop.py  websocket_manager.py
backend/tests/: test_api.py  test_api_blocks.py  test_api_entities.py  test_api_generation.py  test_api_smoothing.py  test_auth.py  test_branches.py  test_camera.py  test_crud.py  test_database.py  test_ir_extraction.py  test_maestro.py  test_models.py  test_muse_tool_calls.py  test_prompts.py  test_rag_temporal.py  test_render.py  test_scribe.py  test_snapshots.py  test_tenancy.py  test_v1_1_web_novel.py  test_vector_memory.py
(+52 files in other folders)
